--- a/p/footholics-player.html
+++ b/p/footholics-player.html
@@ -39,10 +39,17 @@
             background: #000;
         }
 
-        /* JW Player will be placed here */
+        /* Video Player */
         #jwplayer {
             width: 100% !important;
             height: 100% !important;
+            position: relative;
+        }
+
+        #video-player {
+            width: 100% !important;
+            height: 100% !important;
+            background: #000;
         }
 
         /* Branded Watermark - Top Left */
@@ -236,8 +243,8 @@
         <div id="jwplayer"></div>
     </div>
 
-    <!-- JW Player Library -->
-    <script src="https://cdn.jwplayer.com/libraries/KB5zFt7A.js"></script>
+    <!-- HLS.js Library for m3u8 support -->
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
     <script>
         (function() {
@@ -271,6 +278,7 @@
             let streamUrl;
             try {
                 streamUrl = atob(encodedUrl);
+                console.log('Decoded stream URL:', streamUrl);
             } catch (e) {
                 showError('Invalid stream URL encoding');
                 return;
@@ -288,99 +296,155 @@
                 streamUrl += '&key2=' + key2;
             }
 
+            console.log('Initializing player with stream URL:', streamUrl);
+
             // Detect if it's an m3u8/HLS stream
             const isHLS = streamUrl.includes('.m3u8') || streamUrl.includes('m3u8');
+
+            // Create video element
+            const video = document.createElement('video');
+            video.id = 'video-player';
+            video.style.width = '100%';
+            video.style.height = '100%';
+            video.style.objectFit = 'contain';
+            video.controls = true;
+            video.playsInline = true;
             
-            const playerConfig = {
-                file: streamUrl,
-                width: '100%',
-                height: '100%',
-                aspectratio: '16:9',
-                autostart: false,
-                preload: 'auto',
-                primary: 'html5',
-                stretching: 'uniform',
-                logo: {
-                    file: '../assets/img/logos/site/logo.png',
-                    link: 'https://t.me/+XyKdBR9chQpjM2I9',
-                    position: 'top-right',
-                    margin: 15
-                },
-                skin: {
-                    name: 'bekle'
-                }
-            };
-
-            // Add HLS-specific configuration for m3u8 streams
-            if (isHLS) {
-                // Use sources array for better HLS support
-                playerConfig.sources = [{
-                    file: streamUrl,
-                    type: 'hls'
-                }];
-                playerConfig.hlshtml = true;
-                playerConfig.androidhls = true;
-                playerConfig.hlsjsConfig = {
-                    enableWorker: true,
-                    lowLatencyMode: true,
-                    backBufferLength: 90,
-                    maxBufferLength: 30,
-                    maxMaxBufferLength: 60,
-                    maxBufferSize: 60 * 1000 * 1000,
-                    maxBufferHole: 0.5,
-                    highBufferWatchdogPeriod: 2,
-                    nudgeOffset: 0.1,
-                    nudgeMaxRetry: 3,
-                    maxFragLoadingTimeOut: 200000,
-                    maxLoadingDelay: 4,
-                    minAutoBitrate: 0,
-                    emeEnabled: false,
-                    drmSystemOptions: {},
-                    widevineLicenseUrl: undefined,
-                    xhrSetup: function(xhr, url) {
-                        // Handle CORS if needed
-                        xhr.withCredentials = false;
-                    }
-                };
-                // Remove file property when using sources
-                delete playerConfig.file;
-            } else {
-                playerConfig.hlshtml = true;
-                playerConfig.androidhls = true;
-            }
-
-            // Initialize JW Player
-            const player = jwplayer('jwplayer');
-            player.setup(playerConfig);
+            // Replace JW Player div with video element
+            const jwplayerDiv = document.getElementById('jwplayer');
+            jwplayerDiv.appendChild(video);
 
             // Event Handlers
             const thumbnailOverlay = document.getElementById('thumbnailOverlay');
             const loadingSpinner = document.getElementById('loadingSpinner');
             const errorMessage = document.getElementById('errorMessage');
+            let hls = null;
 
             // Play on thumbnail click
             thumbnailOverlay.addEventListener('click', function() {
                 thumbnailOverlay.classList.add('hidden');
                 loadingSpinner.style.display = 'block';
-                player.play();
+                video.play().catch(function(err) {
+                    console.error('Play error:', err);
+                    showError('Autoplay blocked. Please click the play button on the video player.');
+                });
             });
 
-            player.on('play', function() {
+            // Video event handlers
+            video.addEventListener('play', function() {
                 thumbnailOverlay.classList.add('hidden');
                 loadingSpinner.style.display = 'none';
             });
 
-            player.on('buffer', function() {
+            video.addEventListener('waiting', function() {
                 loadingSpinner.style.display = 'block';
             });
 
-            player.on('idle', function() {
+            video.addEventListener('playing', function() {
                 loadingSpinner.style.display = 'none';
             });
 
-            player.on('error', function(e) {
-                showError('Player Error: ' + (e.message || 'Unable to play stream'));
+            video.addEventListener('ended', function() {
+                thumbnailOverlay.classList.remove('hidden');
             });
+
+            video.addEventListener('error', function(e) {
+                console.error('Video error:', e);
+                let errorMsg = 'Video Error: ';
+                if (video.error) {
+                    switch(video.error.code) {
+                        case 1:
+                            errorMsg += 'MEDIA_ERR_ABORTED';
+                            break;
+                        case 2:
+                            errorMsg += 'MEDIA_ERR_NETWORK';
+                            break;
+                        case 3:
+                            errorMsg += 'MEDIA_ERR_DECODE';
+                            break;
+                        case 4:
+                            errorMsg += 'MEDIA_ERR_SRC_NOT_SUPPORTED';
+                            break;
+                        default:
+                            errorMsg += 'Unknown error';
+                    }
+                } else {
+                    errorMsg += 'Unable to play stream';
+                }
+                showError(errorMsg);
+            });
+
+            // Initialize player based on stream type
+            if (isHLS) {
+                // Use HLS.js for m3u8 streams
+                if (Hls.isSupported()) {
+                    hls = new Hls({
+                        enableWorker: true,
+                        lowLatencyMode: true,
+                        backBufferLength: 90,
+                        maxBufferLength: 30,
+                        maxMaxBufferLength: 60,
+                        maxBufferSize: 60 * 1000 * 1000,
+                        maxBufferHole: 0.5,
+                        highBufferWatchdogPeriod: 2,
+                        nudgeOffset: 0.1,
+                        nudgeMaxRetry: 3,
+                        maxFragLoadingTimeOut: 200000,
+                        maxLoadingDelay: 4,
+                        minAutoBitrate: 0,
+                        xhrSetup: function(xhr, url) {
+                            // Handle CORS if needed
+                            xhr.withCredentials = false;
+                        }
+                    });
+
+                    hls.loadSource(streamUrl);
+                    hls.attachMedia(video);
+
+                    hls.on(Hls.Events.MANIFEST_PARSED, function() {
+                        console.log('HLS manifest parsed successfully');
+                        loadingSpinner.style.display = 'none';
+                    });
+
+                    hls.on(Hls.Events.ERROR, function(event, data) {
+                        console.error('HLS Error:', data);
+                        if (data.fatal) {
+                            switch(data.type) {
+                                case Hls.ErrorTypes.NETWORK_ERROR:
+                                    console.log('Network error, trying to recover...');
+                                    hls.startLoad();
+                                    break;
+                                case Hls.ErrorTypes.MEDIA_ERROR:
+                                    console.log('Media error, trying to recover...');
+                                    hls.recoverMediaError();
+                                    break;
+                                default:
+                                    console.error('Fatal error, cannot recover');
+                                    showError('Fatal HLS Error: ' + data.type + ' - ' + data.details);
+                                    hls.destroy();
+                                    break;
+                            }
+                        }
+                    });
+                } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+                    // Native HLS support (Safari)
+                    console.log('Using native HLS support');
+                    video.src = streamUrl;
+                    video.addEventListener('loadedmetadata', function() {
+                        console.log('Stream loaded (native HLS)');
+                        loadingSpinner.style.display = 'none';
+                    });
+                } else {
+                    showError('HLS playback is not supported in this browser.');
+                }
+            } else {
+                // Regular video stream
+                video.src = streamUrl;
+                video.addEventListener('loadedmetadata', function() {
+                    console.log('Stream loaded');
+                    loadingSpinner.style.display = 'none';
+                });
+            }
 
             function showError(message) {
                 loadingSpinner.style.display = 'none';
@@ -388,6 +452,13 @@
                 errorMessage.style.display = 'block';
                 thumbnailOverlay.classList.add('hidden');
             }
+
+            // Cleanup on page unload
+            window.addEventListener('beforeunload', function() {
+                if (hls) {
+                    hls.destroy();
+                }
+            });
 
             // Prevent iframe embedding from unauthorized domains
             if (window.self !== window.top) {
