--- a/2025-12-10-real-madrid-vs-manchester-city.html
+++ b/2025-12-10-real-madrid-vs-manchester-city.html
@@ -115,7 +115,7 @@
             <div class="event-hero-content animate-fade-in">
                 <h1 class="event-title">Real Madrid vs Manchester City</h1>
                 <div class="event-meta-row">
-                    <span class="league-badge champions-league">Champions League</span>
+                    <span class="league-badge others">Champions League</span>
                     <div class="match-meta-item">
                         <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
                             <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
