--- a/2025-12-06-inter-miami-vs-vancouver.html
+++ b/2025-12-06-inter-miami-vs-vancouver.html
@@ -281,7 +281,7 @@
             </p>
 
             <div class="stream-links">
-                <a href="https://aeriswispx.github.io/mpdhls?get=aHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL05ISUtBMS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249OTFkOGQ4NThiN2NkY2NiNmRkODI1NDY5MTkwNTE0YmQ=" class="stream-link-card">
+                <a href="p/1-live.html?url=https%3A//aeriswispx.github.io/mpdhls%3Fget%3DaHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL05ISUtBMS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249OTFkOGQ4NThiN2NkY2NiNmRkODI1NDY5MTkwNTE0YmQ%3D" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -294,7 +294,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/hd/hd10.php" class="stream-link-card">
+                <a href="p/2-live.html?url=https%3A//sportzonline.top/channels/hd/hd10.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -307,7 +307,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/hd/hd10.php" class="stream-link-card">
+                <a href="p/3-live.html?url=https%3A//sportzonline.top/channels/hd/hd10.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -320,7 +320,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Mobile Optimized</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/hd/hd10.php" class="stream-link-card">
+                <a href="p/4-live.html?url=https%3A//sportzonline.top/channels/hd/hd10.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
