--- a/2025-12-07-real-madrid-vs-celta-vigo.html
+++ b/2025-12-07-real-madrid-vs-celta-vigo.html
@@ -283,7 +283,7 @@ Real Madrid — second in the table, just behind riv...</p>
             </p>
 
             <div class="stream-links">
-                <a href="https://aeriswispx.github.io/mpdhls?get=aHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI=" class="stream-link-card">
+                <a href="p/1-live.html?url=https%3A//aeriswispx.github.io/mpdhls%3Fget%3DaHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI%3D" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -296,7 +296,7 @@ Real Madrid — second in the table, just behind riv...</p>
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://aeriswispx.github.io/mpdhls?get=aHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI=" class="stream-link-card">
+                <a href="p/2-live.html?url=https%3A//aeriswispx.github.io/mpdhls%3Fget%3DaHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI%3D" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -309,7 +309,7 @@ Real Madrid — second in the table, just behind riv...</p>
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://aeriswispx.github.io/mpdhls?get=aHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI=" class="stream-link-card">
+                <a href="p/3-live.html?url=https%3A//aeriswispx.github.io/mpdhls%3Fget%3DaHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI%3D" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -322,7 +322,7 @@ Real Madrid — second in the table, just behind riv...</p>
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Mobile Optimized</p>
                 </a>
 
-                <a href="https://aeriswispx.github.io/mpdhls?get=aHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI=" class="stream-link-card">
+                <a href="p/4-live.html?url=https%3A//aeriswispx.github.io/mpdhls%3Fget%3DaHR0cHM6Ly9obHMuY2Rub2s5LmNvbS9saXZlL01BU0lFVS9pbmRleC5tM3U4P2V4cGlyZT0xNzg4NDI3MjU2JnNpZ249YjkxZmNmYzM2ZmU3MjM3NWU4ZjhjYzgxM2RlMDIyMGI%3D" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
