--- a/2025-12-06-augsburg-vs-leverkusen.html
+++ b/2025-12-06-augsburg-vs-leverkusen.html
@@ -281,7 +281,7 @@
             </p>
 
             <div class="stream-links">
-                <a href="https://sportzonline.top/channels/bra/br1.php" class="stream-link-card">
+                <a href="p/1-live.html?url=https%3A//sportzonline.top/channels/bra/br1.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -294,7 +294,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/hd/hd11.php" class="stream-link-card">
+                <a href="p/2-live.html?url=https%3A//sportzonline.top/channels/hd/hd11.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -307,7 +307,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/bra/br1.php" class="stream-link-card">
+                <a href="p/3-live.html?url=https%3A//sportzonline.top/channels/bra/br1.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -320,7 +320,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Mobile Optimized</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/hd/hd11.php" class="stream-link-card">
+                <a href="p/4-live.html?url=https%3A//sportzonline.top/channels/hd/hd11.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
