--- a/2025-12-06-real-betis-vs-barcelona.html
+++ b/2025-12-06-real-betis-vs-barcelona.html
@@ -283,7 +283,7 @@ It’s a big La Liga clash: the hom...</p>
             </p>
 
             <div class="stream-links">
-                <a href="https://sportzonline.top/channels/hd/hd2.php" class="stream-link-card">
+                <a href="p/1-live.html?url=https%3A//sportzonline.top/channels/hd/hd2.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -296,7 +296,7 @@ It’s a big La Liga clash: the hom...</p>
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/hd/hd6.php" class="stream-link-card">
+                <a href="p/2-live.html?url=https%3A//sportzonline.top/channels/hd/hd6.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -309,7 +309,7 @@ It’s a big La Liga clash: the hom...</p>
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/pt/eleven2.php" class="stream-link-card">
+                <a href="p/3-live.html?url=https%3A//sportzonline.top/channels/pt/eleven2.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -322,7 +322,7 @@ It’s a big La Liga clash: the hom...</p>
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Mobile Optimized</p>
                 </a>
 
-                <a href="https://sportzonline.top/channels/bra/br2.php" class="stream-link-card">
+                <a href="p/4-live.html?url=https%3A//sportzonline.top/channels/bra/br2.php" class="stream-link-card">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
