Update Real Madrid vs Barcelona

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                     
 
                                         <!-- Match Card -->
+                    
+
+                                        <!-- Match Card -->
                     <article class="glass-card match-card">
                         <img src="assets/img/real-madrid-barcelona-poster.jpg" alt="Real Madrid vs Barcelona" class="match-poster" loading="lazy">
                         <div class="match-header">
@@ -143,7 +146,7 @@
                                     <line x1="8" y1="2" x2="8" y2="6"></line>
                                     <line x1="3" y1="10" x2="21" y2="10"></line>
                                 </svg>
-                                <span>Jan 11, 2026</span>
+                                <span>January 11, 2026</span>
                             </div>
                             <div class="match-meta-item">
                                 <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
